{
    "version": 1,
    "name": "playerAction",
    "maps": [
        {
            "name": "playerControl",
            "id": "ba850f45-b72e-4431-b43a-7ebd4c219a1e",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b9eef512-9a4d-4963-b630-a9133d290ed3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "753617f5-5f0d-44ff-a092-4c6d9e07e6a6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "45c8831b-3715-4320-a469-c8ea89e624b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab082a79-e380-4796-824a-6cce06b530c7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a457812-af73-402c-9777-6a069f384661",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64d180de-8903-42d5-aaee-3943dd36df91",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5124fc9-645e-4c84-ae44-3e339367901d",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b56ec440-61bb-419b-983c-a4215b5bc005",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "0f9b232f-2091-41d2-825a-0e3f92cb8068",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "c6b3288e-26e2-4a91-a604-cf14ba1690c0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "78e4dfd5-e1c7-4c3a-a2ca-c9e86bd19997",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b13fa97-7fa2-4d58-b94b-f358b3accc10",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6e469f5-a0d2-4a4d-85ec-591e5628a68e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}